--- a/on_types/README.adoc
+++ b/on_types/README.adoc
@@ -122,7 +122,7 @@ I set up this cheat sheet for you (and myself, since I have a bad memory and can
 
 [latexmath]
 ++++
-256 = \textbf{F} \times 16^1 + \textbf{F} \times 16^0 = 15 \times 16^1 + 15 \times 16^0 = \textbf{0x}\text{FF}
+256 = \text{F} \times 16^1 + \text{F} \times 16^0 = 15 \times 16^1 + 15 \times 16^0 = \textbf{0x}\text{FF}
 ++++
 
 [latexmath]
